style.css
/* aqua - E3FDFD
light green - dbffd7
 EAEAEA
light white - f3f3f5
green - 06ac03
purple - 64199D
orange - FEB92D */

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    border-radius: 10px;
}

body{
    background-color: #dbffd7;
}

main{
    display: flex;
    flex-direction: column;
    /* justify-content: space-around; */
    margin: 90px auto;
    width: 550px;
    height: 750px;
    background-color: #f3f3f5;
    padding: 25px;
    gap: 20px;
}

section{
    background-color: #EAEAEA;
}

.display{
    height: 200px;
    width: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-end;
    padding: 10px;
    font-size: 42px;
}
.previousContent{
    opacity: .70;
}
.input-container{
    height: 500px;
    width: auto;
    display: flex;
    flex-direction: column;
    gap: 10px;
}
article{
    height: 90px;
    width: auto;
    background-color: #EAEAEA;
}
.input-btn{
    display: flex;
    justify-content: space-around;
    align-items: center;
}
.input-btn button{
    width: 150px;
    height: 70px;
    background-color: #E3FDFD;
    opacity: .75;
    font-size: 18px;
}
.input-btn .operation{
    width: 100px;
}

.number-wrap{
    display: flex;
    justify-content: space-around;
    align-items: center;
}
.number-wrap button{
    width: 100px;
    height: 70px;
    background-color: #E3FDFD;
    opacity: .75;
    color: black;
    font-size: 18px;
}
.buttons,
.all-clear,
.delete,
.equals{
    cursor: pointer;
    outline: none;
    border: 1px solid white;
}
.buttons:hover,
.all-clear:hover,
.delete:hover,
.equals:hover{
 background-color: white;
 opacity: 1;
}

#operators{
    cursor: pointer;
    outline: none;
    border: 1px solid white;
    background-color: #FEB92D;
    opacity: .75;
}

#operators:hover{
    background-color: white;
    opacity: 1;
}

